// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TopBar No Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Settings"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Settings"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar One Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Settings"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Settings"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Settings"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Settings"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Two Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <button
        aria-controls=""
        aria-haspopup="true"
        aria-label="Show notifications"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            height="1em"
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M21 19v1H3v-1l2-2v-6c0-3.1 2.03-5.83 5-6.71V4a2 2 0 0 1 2-2a2 2 0 0 1 2 2v.29c2.97.88 5 3.61 5 6.71v6l2 2m-7 2a2 2 0 0 1-2 2a2 2 0 0 1-2-2"
              fill="currentColor"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Settings"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        title="Settings"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;
